# torch_dcor

./: .gitignore  LICENSE  README.md  pyproject.toml
dcor_torch/: __init__.py  core.py
tests/: test_dcor_vs_reference.py  test_edge_cases.py  test_pdcor_vs_reference.py
