[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dcor_torch"
version = "0.1.0"
description = "GPU-batched distance correlation (SR2007) and partial distance correlation (SR2014) in torch, verified against the reference `dcor` package."
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Marvin Sass", email = "sass@tu-berlin.de"},
]
dependencies = [
    "torch>=2.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "dcor>=0.6",
    "numpy>=1.24",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["dcor_torch*"]
exclude = ["tests*"]
